--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
-      - run: pip install mkdocs-terminal pymdown-extensions
+        run: pip install mkdocs-terminal pymdown-extensions
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
